--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,45 @@
 .App {
-  text-align: center;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  flex-direction: column;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.header {
+  background-color: slategray;
+  color: white;
+  padding: 1.2em;
+  width: 100vw;
+  box-sizing: border-box;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: flex-start;
+    align-items: center;
+    margin-bottom: 10vw;
 }
 
-.App-link {
+.header::after {
+  content: '';
+  position: absolute;
+  z-index: -1;
+  background-color: inherit;
+  top: -5vmin;
+  height: 10vw;
+  width: 120vw;
+  transform-origin: 100% 100%;
+  transform: rotate(-4deg);
+}
+
+.container {
+  width: 720px;
+  max-width: 80%;
+  text-align: left;
+}
+
+.center-text {
+  text-align:center
+}
+
+a {
   color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
